--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
-    <!-- <button></button> -->
   </head>
   <body>
     <div id="app"></div>
+    <!-- <div id="counter">0</div> -->
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
